# gok

lab1/src/: test.c
lab2/: grammar.txt  input2.txt
lab2/include/: ast_tree.hpp  llvm_data.hpp
lab2/src/: CMakeLists.txt  __input.cpp  __llvm.txt  ast_tree.cpp  main.cpp
lab3/: CMakeLists.txt
lab3/include/: ast_tree.hpp  basic_block.hpp  builder.hpp  driver.hpp  function.hpp  instruction.hpp  ir.hpp  llvm_data.hpp  module.hpp  scanner.hpp
lab3/src/: CMakeLists.txt  __input.cpp  __llvm.txt  ast_tree.cpp  basic_block.cpp  builder.cpp  driver.cpp  function.cpp  ir.cpp  lexer.flex  main.cpp  parser.y
lab3_dop/: full.txt  main.cpp  program.txt
